--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nya Nya Para - Homepage</title>
+	<title>NyaNya Para - Homepage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Nya Nya Para" />
+	<meta name="description" content="NyaNya Para" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="Usagi Love" />
 
@@ -52,7 +52,8 @@
 				<div class="fh5co-text">
 					<div class="container">
 						<div class="row">
-							<h1 class="to-animate">Nya Nya Para</h1>
+							<h1 class="to-animate">NyaNya Para</h1>
+							<h1 class="to-animate" style="font-size: 72px"><span style="color: #327acf">Cat</span> <span style="color: pink">Cafe</span></h1>
 							<h2 class="to-animate">Provided <span>by</span> Usagi Love</h2>
 						</div>
 					</div>
