--- a/index.html
+++ b/index.html
@@ -193,8 +193,36 @@
 		</div>
 		
 	</div>
-	
-	
+
+	<div id="fh5co-events" style="background-image: url(images/type-2.png);" data-stellar-background-ratio="0.5">
+		<div class="fh5co-overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="row text-center fh5co-heading row-padded">
+					<div class="col-md-8 col-md-offset-2 to-animate fadeIn animated">
+						<h2 class="heading">Screenshots</h2>
+						<p class="sub-heading">The opening was a great success, thanks for joining everyone!</p>
+					</div>
+				</div>
+				<div class="col-md-12 to-animate">
+					<div class="fh5co-type">
+						<img src="images/ss/ffxiv_14082021_041939_596.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+				</div>
+				<div class="col-md-12 to-animate">
+					<div class="fh5co-type">
+						<img src="images/ss/ffxiv_14082021_044012_832.jpg" style="width: 100%; height: auto" alt="" />
+
+					</div>
+				</div>
+				<div class="col-md-12 to-animate">
+					<div class="fh5co-type">
+						<img src="images/ss/ffxiv_14082021_052532_062.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
