--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/res_img_1.jpg)"></div>
 			<div class="fh5co-2col fh5co-text">
 				<h2 class="heading to-animate">About Us</h2>
-				<p class="to-animate">NyaNya Para is cat cafe made for people looking to have a relaxing time with surrounded by lovely creatures. Enjoy the company of my lovely coeurl, and let your own minions walk around freely.</p>
+				<p class="to-animate">NyaNya Para is cat cafe made for people looking to have a relaxing time surrounded by lovely creatures. Enjoy the company of my lovely coeurl, and let your own minions walk around freely.</p>
 			</div>
 		</div>
 
