--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic|Merriweather:300,400italic,300italic,400,700italic' rel='stylesheet' type='text/css'>
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -44,10 +44,27 @@
 	<body>
 
 	<div id="fh5co-container">
+		<div class="js-sticky">
+			<div class="fh5co-main-nav">
+				<div class="container-fluid">
+					<div class="fh5co-menu-1">
+						<a href="#" data-nav-section="home">Home</a>
+						<a href="#" data-nav-section="about">About</a>
+						<a href="#" data-nav-section="features">Menu</a>
+						<a href="#" data-nav-section="directions">Directions</a>
+						<a href="#" data-nav-section="pictures">Pictures</a>
+					</div>
+					<div class="fh5co-logo">
+						<a href="/">NyaNya Para</a>
+					</div>
+				</div>
+
+			</div>
+		</div>
 		<div id="fh5co-home" class="js-fullheight" data-section="home">
 
 			<div class="flexslider">
-				
+
 				<div class="fh5co-overlay"></div>
 				<div class="fh5co-text">
 					<div class="container">
@@ -63,23 +80,7 @@
 			  	</ul>
 
 			</div>
-			
-		</div>
-		
-		<div class="js-sticky">
-			<div class="fh5co-main-nav">
-				<div class="container-fluid">
-					<div class="fh5co-menu-1">
-						<a href="#" data-nav-section="home">Home</a>
-						<a href="#" data-nav-section="about">About</a>
-						<a href="#" data-nav-section="features">Menu</a>
-					</div>
-					<div class="fh5co-logo">
-						<a href="index.html">NyaNya Para</a>
-					</div>
-				</div>
-				
-			</div>
+
 		</div>
 
 		<div id="fh5co-about" data-section="about">
@@ -191,30 +192,102 @@
 
 			</div>
 		</div>
-		
-	</div>
 
-	<div id="fh5co-events" style="background-image: url(images/type-2.png);" data-stellar-background-ratio="0.5">
-		<div class="container">
-			<div class="row">
+		<div id="fh5co-type" data-section="directions" style="background-image: url(images/slide_1.jpg); background-position: 0px 0px;" data-stellar-background-ratio="0.5" class="animated">
+			<div class="fh5co-overlay"></div>
+			<div class="container">
 				<div class="row text-center fh5co-heading row-padded">
-					<div class="col-md-8 col-md-offset-2 to-animate fadeIn animated">
-						<h2 class="heading">Screenshots</h2>
-						<p class="sub-heading">The opening was a great success, thanks for joining everyone!</p>
+					<div class="col-md-8 col-md-offset-2">
+						<h2 class="heading" style="color: white">Directions</h2>
 					</div>
 				</div>
-				<div class="col-md-12 to-animate">
+				<div class="row">
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Teleport to Kugane</p>
+							<img src="images/route/step1.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Use to crystal to go into the Residential Aethernet</p>
+							<img src="images/route/step2.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Select Ward 2</p>
+							<img src="images/route/step4.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Take the Aetherite at the end of the docks</p>
+							<img src="images/route/step5.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Teleport to Kobai Goten Subdivision</p>
+							<img src="images/route/step6.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Walk up to this building</p>
+							<img src="images/route/step7.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+					<div class="col-md-offset-3 col-md-6 col-sm-12 to-animate fadeInUp animated">
+						<div class="fh5co-type">
+							<p>Enter Room 39</p>
+							<img src="images/route/step8.jpg" style="width: 100%; height: auto" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="fh5co-events" style="background-image: url(images/type-2.png);" data-section="pictures" data-stellar-background-ratio="0.5">
+			<div class="container">
+				<div class="row">
+					<div class="row text-center fh5co-heading row-padded">
+						<div class="col-md-8 col-md-offset-2 to-animate fadeIn animated">
+							<h2 class="heading" style="color: black">Pictures</h2>
+							<p class="sub-heading">The opening was a great success, thanks for joining everyone!</p>
+						</div>
+					</div>
+					<div class="col-md-6 to-animate">
 						<img src="images/ss/ffxiv_14082021_041939_596.jpg" style="width: 100%; height: auto" alt="" />
-				</div>
-				<div class="col-md-12 to-animate">
+					</div>
+					<div class="col-md-6 to-animate">
 						<img src="images/ss/ffxiv_14082021_044012_832.jpg" style="width: 100%; height: auto" alt="" />
-				</div>
-				<div class="col-md-12 to-animate">
+					</div>
+					<div class="col-md-6 to-animate">
 						<img src="images/ss/ffxiv_14082021_052532_062.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+
+					<div class="col-md-6 to-animate">
+						<img src="images/ss/ffxiv_14082021_154451_936.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+					<div class="col-md-6 to-animate">
+						<img src="images/ss/ffxiv_14082021_155551_292.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+					<div class="col-md-6 to-animate">
+						<img src="images/ss/ffxiv_14082021_160338_892.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+					<div class="col-md-6 to-animate">
+						<img src="images/ss/ffxiv_14082021_162148_323.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
+					<div class="col-md-6 to-animate">
+						<img src="images/ss/ffxiv_14082021_165423_845.jpg" style="width: 100%; height: auto" alt="" />
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
