--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<a href="#" data-nav-section="menu">Menu</a>
 				</div>
 				<div class="fh5co-logo">
-					<a href="index.html">NYAN</a>
+					<a href="index.html">NYA</a>
 				</div>
 				<div class="fh5co-menu-2">
 					<a href="#" data-nav-section="directions">Directions</a>
@@ -74,7 +74,7 @@
 			<div class="fh5co-text">
 				<div class="container">
 					<div class="row">
-						<h1 class="to-animate">Nyan Nyan Para</h1>
+						<h1 class="to-animate">Nya Nya Para</h1>
 						<h2 class="to-animate">Hyperion, Shirogane, Ward 11, Plot 29</h2>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 		<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/ss/slide_5.jpg)"></div>
 		<div class="fh5co-2col fh5co-text">
 			<h2 class="heading to-animate">About Us</h2>
-			<p class="to-animate"><span class="firstcharacter">N</span>yanNyanPara is a cat cafe run by Miqo'te, it's a place for calmness and relaxation where you can let your minion roam free. We currently have 3 staff members that will help serve you our home-made food.</p>
+			<p class="to-animate"><span class="firstcharacter">N</span>yaNyaPara is a cat cafe run by Miqo'te, it's a place for calmness and relaxation where you can let your minion roam free. We currently have 3 staff members that will help serve you our home-made food.</p>
 		</div>
 	</div>
 
