--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 			<div class="row text-center fh5co-heading row-padded">
 				<div class="col-md-8 col-md-offset-2">
 					<h2 class="heading to-animate fadeInUp animated">Directions</h2>
-					<p class="sub-heading to-animate fadeInUp animated">In case you have trouble finding the place or you are unable to teleport to Kugane, send a /tell Usagi Love's way, I will add you to my friend's list so you can easily teleport here.</p>
+					<p class="sub-heading to-animate fadeInUp animated">In case you have trouble finding the place, send a /tell Usagi Love's way, I will add you to my friend's list so you can easily teleport here.</p>
 				</div>
 			</div>
 		</div>
