--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-		<link href="js/lightbox2-2.11.3/src/css/lightbox.css" rel="stylesheet" />
 	</head>
 <body>
 
@@ -90,9 +89,7 @@
 		</div>
 
 	</div>
-
-
-
+	
 	<div id="fh5co-about" data-section="about">
 		<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/ss/slide_5.jpg)"></div>
 		<div class="fh5co-2col fh5co-text">
@@ -459,24 +456,23 @@
 	<div id="fh5co-contact" data-section="photos">
 		<div class="container">
 			<div class="row text-center fh5co-heading row-padded">
-				<div class="col-md-8 col-md-offset-2">
+				<div class="col-md-12">
 					<h2 class="heading to-animate">Photos</h2>
 					<p class="sub-heading to-animate">These photos were taken of our venue and our lovely patrons.</p>
 				</div>
 			</div>
 			<div class="row">
-				<h3 style="text-align: center">No photos yet, coming soon!</h3>
+				<div class="col-sm-12">
+					<img src="images/photos/cute_1.jpg" style="width: 100%; height: auto" />Author: Graepe Jam
+					<img src="images/photos/cute_2.jpg" style="width: 100%; height: auto" />Author: Graepe Jam
+					<img src="images/photos/cute_3.jpg" style="width: 100%; height: auto" />Author: Usagi Love
+					<img src="images/photos/cute_4.jpg" style="width: 100%; height: auto" />Author: Usagi Love
+				</div>
 			</div>
 
 		</div>
 	</div>
-
-
 </div>
-
-
-
-
 
 
 <!-- jQuery -->
@@ -502,7 +498,6 @@
 </script>
 <!-- Main JS -->
 <script src="js/main.js"></script>
-<script src="js/lightbox2-2.11.3/src/js/lightbox.js"></script>
 <script src="js/sakura/jquery-sakura.min.js"></script>
 <script>
 	$(function() {
